--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <li>адв. Милен Калоянов – +359 88 936 0490 – mkaloianov@abv.bg</li>
         <li>адв. Елена Попова – +359 888 848 477 – elepopova@abv.bg</li>
         <li>юрист-медиатор Стефан Йорданов – 087 727 4808</li>
+        <li>юрист-медиатор Лилия Георгиева   liligk@abv.bg  0884718108<li>    
         <li>адв. Светла Петрова – 0888 201 387 – svetla7007@abv.bg</li>
     </ul>
 </section>
