--- a/index.html
+++ b/index.html
@@ -1,81 +1,188 @@
-
 <!DOCTYPE html>
 <html lang="bg">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Адвокатска кантора Бургас-Сливен – правни услуги и медиация.">
-    <meta name="keywords" content="адвокат Бургас, адвокат Сливен, медиация, правна помощ, адвокат КАТ, сделки с имоти">
-    <meta name="author" content="Адвокатска кантора Бургас-Сливен">
-    <title>Адвокатска кантора Бургас - Сливен</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>⚖️ Адвокатска кантора Бургас - Сливен | Правен баланс и медиация</title>
+  <meta name="description" content="Адвокатска кантора Бургас - Сливен: гражданско и наказателно право, медиация, сделки с имоти, трудово право, семейно и наследствено право, консултации, представителство.">
+  <meta name="keywords" content="адвокат Бургас, адвокат Сливен, медиация, гражданско право, сделки с имоти, трудово право, наследствено право, КАТ, адвокатска кантора">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-<header>
+
+<section class="hero">
+  <div class="hero-overlay">
     <h1>⚖️ Адвокатска кантора Бургас - Сливен</h1>
-    <p>Правен баланс и медиация</p>
-</header>
-
-<nav>
-    <a href="#services">Услуги</a>
-    <a href="#mediation">Медиация</a>
-    <a href="#team">Екип</a>
-    <a href="#contact">Контакти</a>
-</nav>
-
-<section id="services">
-    <h2>⚖️ Нашите услуги</h2>
-    <ul>
-        <li>👨‍⚖️ Гражданско и наказателно право</li>
-        <li>🚗 Обжалване на актове по КАТ</li>
-        <li>🏡 Сделки с недвижими имоти</li>
-        <li>💼 Трудово и осигурително право</li>
-        <li>👪 Семейно и наследствено право</li>
-        <li>📄 Договори, консултации и представителство</li>
-    </ul>
+    <p>Вашият надежден партньор за правен баланс и медиация</p>
+    <nav class="main-nav">
+      <a href="#services">Услуги</a>
+      <a href="#mediation">Медиация</a>
+      <a href="#team">Екип</a>
+      <a href="#offices">Контакти</a>
+    </nav>
+    <a href="#contact" class="btn">Бърза консултация</a>
+  </div>
 </section>
 
-<section id="mediation">
-    <h2>🕊️ Медиация</h2>
-    <p>Предимства: бързина, конфиденциалност, по-ниски разходи. Обхват: семейни, имуществени, търговски, трудови спорове.</p>
-</section>
-
-<section id="quotes">
-    <h2>📜 Правни сентенции</h2>
-    <blockquote>“Всяка собственост има граници, определени от закона.”</blockquote>
-    <blockquote>“Сделката без знание е като къща без основи.”</blockquote>
-</section>
-
-<section id="team">
-    <h2>👥 Екип</h2>
-    <ul>
-        <li>адв. Милен Калоянов – +359 88 936 0490 – mkaloianov@abv.bg</li>
-        <li>адв. Елена Попова – +359 888 848 477 – elepopova@abv.bg</li>
-        <li>юрист-медиатор Стефан Йорданов – 087 727 4808</li>
-        <li>юрист-медиатор Лилия Георгиева   liligk@abv.bg  0884718108<li>    
-        <li>адв. Светла Петрова – 0888 201 387 – svetla7007@abv.bg</li>
-    </ul>
-</section>
-
-<section id="contact">
-    <h2>📍 Контакти</h2>
-    <p><strong>Офис Бургас:</strong> ул. Св. Патриарх Евтимий 21</p>
-    <p><strong>Офис Сливен:</strong> ул. Г.С. Раковски 15, офис 11</p>
-    <div class="maps">
-        <iframe src="https://maps.google.com/maps?q=Бургас,%20Св.%20Патриарх%20Евтимий%2021&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
-        <iframe src="https://maps.google.com/maps?q=Сливен,%20Г.С.%20Раковски%2015&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+<section id="services" class="section-bg">
+  <h2>Нашите услуги</h2>
+  <div class="services-list">
+    <div class="service-card animate">
+      <i class="fa fa-balance-scale"></i>
+      <h4>Гражданско и наказателно право</h4>
     </div>
-    <form>
-        <h3>Форма за запитване</h3>
-        <input type="text" placeholder="Име">
-        <input type="email" placeholder="Email">
-        <textarea placeholder="Вашето запитване"></textarea>
-        <button type="submit">Изпрати</button>
-    </form>
+    <div class="service-card animate">
+      <i class="fa fa-car"></i>
+      <h4>Обжалване на актове по КАТ</h4>
+    </div>
+    <div class="service-card animate">
+      <i class="fa fa-home"></i>
+      <h4>Сделки с недвижими имоти</h4>
+    </div>
+    <div class="service-card animate">
+      <i class="fa fa-briefcase"></i>
+      <h4>Трудово и осигурително право</h4>
+    </div>
+    <div class="service-card animate">
+      <i class="fa fa-people-roof"></i>
+      <h4>Семейно и наследствено право</h4>
+    </div>
+    <div class="service-card animate">
+      <i class="fa fa-file-contract"></i>
+      <h4>Договори, консултации и представителство</h4>
+    </div>
+    <div class="service-card animate">
+      <i class="fa fa-gavel"></i>
+      <h4>Съдебна делба</h4>
+      <p>Съдействие при делба на имоти и наследства в Бургас и Сливен.</p>
+    </div>
+  </div>
+</section>
+
+<section id="mediation" class="section-img" style="background-image: url('https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=1200&q=80');">
+  <h2>Медиация</h2>
+  <div class="mediation-content animate">
+    <p>
+      <b>Предимства:</b> Бързина, конфиденциалност, по-ниски разходи.<br>
+      <b>Обхват:</b> Семейни, имуществени, търговски и трудови спорове.
+    </p>
+  </div>
+</section>
+
+<section class="section-bg">
+  <h2>Правни сентенции</h2>
+  <div class="quotes animate">
+    <blockquote>„Всяка собственост има граници, определени от закона.“</blockquote>
+    <blockquote>„Сделката без знание е като къща без основи.“</blockquote>
+  </div>
+</section>
+
+<section id="team" class="section-bg">
+  <h2>Екип</h2>
+  <div class="team-cards">
+    <div class="card animate">
+      <h3>адв. Милен Калоянов</h3>
+      <p>Адвокат, Бургас и Сливен</p>
+      <p><a href="tel:+359889360490">+359 88 936 0490</a></p>
+      <p><a href="mailto:mkaloianov@abv.bg">mkaloianov@abv.bg</a></p>
+    </div>
+    <div class="card animate">
+      <h3>адв. Елена Попова</h3>
+      <p>Адвокат, Бургас и Сливен</p>
+      <p><a href="tel:+359888848477">+359 888 848 477</a></p>
+      <p><a href="mailto:elepopova@abv.bg">elepopova@abv.bg</a></p>
+    </div>
+    <div class="card animate">
+      <h3>адв. Светла Петрова</h3>
+      <p>Адвокат, Бургас и Сливен</p>
+      <p><a href="tel:+359888201387">0888 201 387</a></p>
+      <p><a href="mailto:svetla7007@abv.bg">svetla7007@abv.bg</a></p>
+    </div>
+  </div>
+  <h3>Юристи и медиатори</h3>
+  <div class="team-cards">
+    <div class="card animate">
+      <h4>Стефан Йорданов</h4>
+      <p>Юрист-медиатор, Сливен и Бургас</p>
+      <p><a href="tel:+359877274808">0877 274 808</a></p>
+    </div>
+    <div class="card animate">
+      <h4>Лилия Георгиева</h4>
+      <p>Юрист-медиатор, Сливен и Бургас</p>
+      <p><a href="tel:+359884718108">0884 718 108</a></p>
+      <p><a href="mailto:liligk@abv.bg">liligk@abv.bg</a></p>
+    </div>
+  </div>
+</section>
+
+<section id="offices" class="section-bg">
+  <h2>Контакти</h2>
+  <div class="offices-wrapper">
+    <div class="office-card animate">
+      <h3>Офис Бургас</h3>
+      <p><b>Адрес:</b> ул. Св. Патриарх Евтимий 21, Бургас</p>
+      <p><b>Лице за контакт:</b> Лилия Георгиева</p>
+      <p><b>Телефон:</b> <a href="tel:+359884718108">0884 718 108</a></p>
+      <p><b>Имейл:</b> <a href="mailto:liligk@abv.bg">liligk@abv.bg</a></p>
+      <div class="gmap">
+        <iframe 
+          style="pointer-events:auto; border:0;" 
+          src="https://www.google.com/maps?q=42.494686,27.469272&z=16&output=embed" 
+          width="100%" height="220" allowfullscreen loading="lazy"></iframe>
+      </div>
+      <a class="btn-map" href="https://www.google.com/maps?q=ул.+Св.+Патриарх+Евтимий+21,+Бургас" target="_blank">
+        <i class="fa fa-map-location-dot"></i> Виж на картата
+      </a>
+    </div>
+    <div class="office-card animate">
+      <h3>Офис Сливен</h3>
+      <p><b>Адрес:</b> ул. Г.С. Раковски 15, офис 11, Сливен</p>
+      <p><b>Лице за контакт:</b> Елена Попова</p>
+      <p><b>Телефон:</b> <a href="tel:+359888848477">+359 888 848 477</a></p>
+      <p><b>Имейл:</b> <a href="mailto:elepopova@abv.bg">elepopova@abv.bg</a></p>
+      <div class="gmap">
+        <iframe 
+          style="pointer-events:auto; border:0;" 
+          src="https://www.google.com/maps?q=42.681168,26.323663&z=16&output=embed" 
+          width="100%" height="220" allowfullscreen loading="lazy"></iframe>
+      </div>
+      <a class="btn-map" href="https://www.google.com/maps?q=ул.+Г.С.+Раковски+15,+Сливен" target="_blank">
+        <i class="fa fa-map-location-dot"></i> Виж на картата
+      </a>
+    </div>
+  </div>
+</section>
+
+<section id="contact" class="section-img" style="background-image: url('https://images.unsplash.com/photo-1416339306562-f3d12fefd36f?auto=format&fit=crop&w=1200&q=80'); padding: 40px 20px;">
+  <h2 style="color: white; text-align: center;">Свържете се с нас</h2>
+  <form action="https://formsubmit.co/liligk@abv.bg" method="POST"
+    style="max-width: 600px; margin: 0 auto; background: rgba(255,255,255,0.95); padding: 20px; border-radius: 10px;">
+    <label for="name">Име:</label>
+    <input type="text" id="name" name="name" required>
+    <label for="email">Имейл:</label>
+    <input type="email" id="email" name="email" required>
+    <label for="message">Съобщение:</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+    <button type="submit">Изпрати</button>
+  </form>
 </section>
 
 <footer>
-    <p>&copy; 2025 Адвокатска кантора Бургас - Сливен</p>
+  <p>&copy; 2025 Адвокатска кантора Бургас - Сливен. Всички права запазени.</p>
 </footer>
+
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  function onScroll() {
+    document.querySelectorAll('.animate').forEach(el => {
+      let rect = el.getBoundingClientRect();
+      if(rect.top < window.innerHeight - 50) el.classList.add('visible');
+    });
+  }
+  window.addEventListener('scroll', onScroll);
+  onScroll();
+});
+</script>
 </body>
-</html>
+</html></html>
