--- a/index.html
+++ b/index.html
@@ -3,186 +3,198 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>⚖️ Адвокатска кантора Бургас - Сливен | Правен баланс и медиация</title>
+  <title>⚖️ Адвокатска кантора Бургас - Сливен | Правна защита и медиация</title>
   <meta name="description" content="Адвокатска кантора Бургас - Сливен: гражданско и наказателно право, медиация, сделки с имоти, трудово право, семейно и наследствено право, консултации, представителство.">
   <meta name="keywords" content="адвокат Бургас, адвокат Сливен, медиация, гражданско право, сделки с имоти, трудово право, наследствено право, КАТ, адвокатска кантора">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
+  <header class="hero">
+    <div class="hero-overlay">
+      <h1>⚖️ Адвокатска кантора Бургас - Сливен</h1>
+      <p>Вашият доверен партньор за правна защита и медиация</p>
+      <a href="#contact" class="btn-consult">Бърза консултация</a>
+      <nav class="main-nav">
+        <a href="#services">Услуги</a>
+        <a href="#mediation">Медиация</a>
+        <a href="#team">Екип</a>
+        <a href="#offices">Контакти</a>
+      </nav>
+    </div>
+  </header>
 
-<section class="hero">
-  <div class="hero-overlay">
-    <h1>⚖️ Адвокатска кантора Бургас - Сливен</h1>
-    <p>Вашият надежден партньор за правен баланс и медиация</p>
-    <nav class="main-nav">
-      <a href="#services">Услуги</a>
-      <a href="#mediation">Медиация</a>
-      <a href="#team">Екип</a>
-      <a href="#offices">Контакти</a>
-    </nav>
-    <a href="#contact" class="btn">Бърза консултация</a>
-  </div>
-</section>
-
-<section id="services" class="section-bg">
-  <h2>Нашите услуги</h2>
-  <div class="services-list">
-    <div class="service-card animate">
-      <i class="fa fa-balance-scale"></i>
-      <h4>Гражданско и наказателно право</h4>
-    </div>
-    <div class="service-card animate">
-      <i class="fa fa-car"></i>
-      <h4>Обжалване на актове по КАТ</h4>
-    </div>
-    <div class="service-card animate">
-      <i class="fa fa-home"></i>
-      <h4>Сделки с недвижими имоти</h4>
-    </div>
-    <div class="service-card animate">
-      <i class="fa fa-briefcase"></i>
-      <h4>Трудово и осигурително право</h4>
-    </div>
-    <div class="service-card animate">
-      <i class="fa fa-people-roof"></i>
-      <h4>Семейно и наследствено право</h4>
-    </div>
-    <div class="service-card animate">
-      <i class="fa fa-file-contract"></i>
-      <h4>Договори, консултации и представителство</h4>
-    </div>
-    <div class="service-card animate">
-      <i class="fa fa-gavel"></i>
-      <h4>Съдебна делба</h4>
-      <p>Съдействие при делба на имоти и наследства в Бургас и Сливен.</p>
-    </div>
-  </div>
-</section>
-
-<section id="mediation" class="section-img" style="background-image: url('https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=1200&q=80');">
-  <h2>Медиация</h2>
-  <div class="mediation-content animate">
+  <section class="welcome">
     <p>
-      <b>Предимства:</b> Бързина, конфиденциалност, по-ниски разходи.<br>
-      <b>Обхват:</b> Семейни, имуществени, търговски и трудови спорове.
+      Добре дошли в Адвокатска кантора Бургас – Сливен.<br>
+      Предлагаме професионални правни услуги и медиация в Бургас, Сливен и региона. Нашият екип е готов да Ви съдейства при всякакви правни казуси – бързо, дискретно и ефективно.
     </p>
-  </div>
-</section>
+  </section>
 
-<section class="section-bg">
-  <h2>Правни сентенции</h2>
-  <div class="quotes animate">
-    <blockquote>„Всяка собственост има граници, определени от закона.“</blockquote>
-    <blockquote>„Сделката без знание е като къща без основи.“</blockquote>
-  </div>
-</section>
-
-<section id="team" class="section-bg">
-  <h2>Екип</h2>
-  <div class="team-cards">
-    <div class="card animate">
-      <h3>адв. Милен Калоянов</h3>
-      <p>Адвокат, Бургас и Сливен</p>
-      <p><a href="tel:+359889360490">+359 88 936 0490</a></p>
-      <p><a href="mailto:mkaloianov@abv.bg">mkaloianov@abv.bg</a></p>
-    </div>
-    <div class="card animate">
-      <h3>адв. Елена Попова</h3>
-      <p>Адвокат, Бургас и Сливен</p>
-      <p><a href="tel:+359888848477">+359 888 848 477</a></p>
-      <p><a href="mailto:elepopova@abv.bg">elepopova@abv.bg</a></p>
-    </div>
-    <div class="card animate">
-      <h3>адв. Светла Петрова</h3>
-      <p>Адвокат, Бургас и Сливен</p>
-      <p><a href="tel:+359888201387">0888 201 387</a></p>
-      <p><a href="mailto:svetla7007@abv.bg">svetla7007@abv.bg</a></p>
-    </div>
-  </div>
-  <h3>Юристи и медиатори</h3>
-  <div class="team-cards">
-    <div class="card animate">
-      <h4>Стефан Йорданов</h4>
-      <p>Юрист-медиатор, Сливен и Бургас</p>
-      <p><a href="tel:+359877274808">0877 274 808</a></p>
-    </div>
-    <div class="card animate">
-      <h4>Лилия Георгиева</h4>
-      <p>Юрист-медиатор, Сливен и Бургас</p>
-      <p><a href="tel:+359884718108">0884 718 108</a></p>
-      <p><a href="mailto:liligk@abv.bg">liligk@abv.bg</a></p>
-    </div>
-  </div>
-</section>
-
-<section id="offices" class="section-bg">
-  <h2>Контакти</h2>
-  <div class="offices-wrapper">
-    <div class="office-card animate">
-      <h3>Офис Бургас</h3>
-      <p><b>Адрес:</b> ул. Св. Патриарх Евтимий 21, Бургас</p>
-      <p><b>Лице за контакт:</b> Лилия Георгиева</p>
-      <p><b>Телефон:</b> <a href="tel:+359884718108">0884 718 108</a></p>
-      <p><b>Имейл:</b> <a href="mailto:liligk@abv.bg">liligk@abv.bg</a></p>
-      <div class="gmap">
-        <iframe 
-          style="pointer-events:auto; border:0;" 
-          src="https://www.google.com/maps?q=42.494686,27.469272&z=16&output=embed" 
-          width="100%" height="220" allowfullscreen loading="lazy"></iframe>
+  <section id="services" class="section-bg">
+    <h2>Нашите услуги</h2>
+    <div class="services-list">
+      <div class="service-card animate">
+        <i class="fa fa-balance-scale"></i>
+        <h4>Гражданско и наказателно право</h4>
+        <p>Консултации и процесуална защита по граждански и наказателни дела.</p>
       </div>
-      <a class="btn-map" href="https://www.google.com/maps?q=ул.+Св.+Патриарх+Евтимий+21,+Бургас" target="_blank">
-        <i class="fa fa-map-location-dot"></i> Виж на картата
-      </a>
-    </div>
-    <div class="office-card animate">
-      <h3>Офис Сливен</h3>
-      <p><b>Адрес:</b> ул. Г.С. Раковски 15, офис 11, Сливен</p>
-      <p><b>Лице за контакт:</b> Елена Попова</p>
-      <p><b>Телефон:</b> <a href="tel:+359888848477">+359 888 848 477</a></p>
-      <p><b>Имейл:</b> <a href="mailto:elepopova@abv.bg">elepopova@abv.bg</a></p>
-      <div class="gmap">
-        <iframe 
-          style="pointer-events:auto; border:0;" 
-          src="https://www.google.com/maps?q=42.681168,26.323663&z=16&output=embed" 
-          width="100%" height="220" allowfullscreen loading="lazy"></iframe>
+      <div class="service-card animate">
+        <i class="fa fa-car"></i>
+        <h4>Обжалване на актове (КАТ)</h4>
+        <p>Обжалване на актове и наказателни постановления, свързани с пътнотранспортни нарушения.</p>
       </div>
-      <a class="btn-map" href="https://www.google.com/maps?q=ул.+Г.С.+Раковски+15,+Сливен" target="_blank">
-        <i class="fa fa-map-location-dot"></i> Виж на картата
-      </a>
+      <div class="service-card animate">
+        <i class="fa fa-home"></i>
+        <h4>Сделки с недвижими имоти</h4>
+        <p>Правен анализ, подготовка и изповядване на сделки с имоти.</p>
+      </div>
+      <div class="service-card animate">
+        <i class="fa fa-briefcase"></i>
+        <h4>Трудово и осигурително право</h4>
+        <p>Консултации и защита на служители и работодатели при трудови спорове.</p>
+      </div>
+      <div class="service-card animate">
+        <i class="fa fa-people-roof"></i>
+        <h4>Семейно и наследствено право</h4>
+        <p>Разводи, издръжки, наследства, делби.</p>
+      </div>
+      <div class="service-card animate">
+        <i class="fa fa-file-contract"></i>
+        <h4>Договори и представителство</h4>
+        <p>Изготвяне, преглед и консултиране на договори. Представителство пред съд и институции.</p>
+      </div>
+      <div class="service-card animate">
+        <i class="fa fa-gavel"></i>
+        <h4>Съдебна делба</h4>
+        <p>Съдействие при делба на имоти и наследства в Бургас и Сливен.</p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="contact" class="section-img" style="background-image: url('https://images.unsplash.com/photo-1416339306562-f3d12fefd36f?auto=format&fit=crop&w=1200&q=80'); padding: 40px 20px;">
-  <h2 style="color: white; text-align: center;">Свържете се с нас</h2>
-  <form action="https://formsubmit.co/liligk@abv.bg" method="POST"
-    style="max-width: 600px; margin: 0 auto; background: rgba(255,255,255,0.95); padding: 20px; border-radius: 10px;">
-    <label for="name">Име:</label>
-    <input type="text" id="name" name="name" required>
-    <label for="email">Имейл:</label>
-    <input type="email" id="email" name="email" required>
-    <label for="message">Съобщение:</label>
-    <textarea id="message" name="message" rows="5" required></textarea>
-    <button type="submit">Изпрати</button>
-  </form>
-</section>
+  <section id="mediation" class="section-img" style="background-image: url('https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=1200&q=80');">
+    <h2>Медиация</h2>
+    <div class="mediation-content animate">
+      <p>
+        Медиацията е бърз, поверителен и по-достъпен начин за решаване на спорове извън съда.<br>
+        Подходяща е за: семейни, имуществени, търговски и трудови конфликти.<br>
+        Нашите медиатори ще Ви помогнат да намерите най-доброто решение и да спестите време и средства.
+      </p>
+    </div>
+  </section>
 
-<footer>
-  <p>&copy; 2025 Адвокатска кантора Бургас - Сливен. Всички права запазени.</p>
-</footer>
+  <section class="section-bg">
+    <h2>Правни сентенции</h2>
+    <div class="quotes animate">
+      <blockquote>„Всяка собственост има граници, определени от закона.“</blockquote>
+      <blockquote>„Сделката без знание е като къща без основи.“</blockquote>
+    </div>
+  </section>
 
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-  function onScroll() {
-    document.querySelectorAll('.animate').forEach(el => {
-      let rect = el.getBoundingClientRect();
-      if(rect.top < window.innerHeight - 50) el.classList.add('visible');
-    });
-  }
-  window.addEventListener('scroll', onScroll);
-  onScroll();
-});
-</script>
+  <!-- Екип - всички заедно с обозначение -->
+  <section id="team" class="section-bg">
+    <h2>Екип</h2>
+    <div class="team-cards">
+      <div class="card animate">
+        <h3>адв. Милен Калоянов</h3>
+        <p><strong>Адвокат</strong><br>Бургас и Сливен</p>
+        <p><a href="tel:+359889360490">+359 88 936 0490</a></p>
+        <p><a href="mailto:mkaloianov@abv.bg">mkaloianov@abv.bg</a></p>
+      </div>
+      <div class="card animate">
+        <h3>адв. Елена Попова</h3>
+        <p><strong>Адвокат</strong><br>Бургас и Сливен</p>
+        <p><a href="tel:+359888848477">+359 888 848 477</a></p>
+        <p><a href="mailto:elepopova@abv.bg">elepopova@abv.bg</a></p>
+      </div>
+      <div class="card animate">
+        <h3>адв. Светла Петрова</h3>
+        <p><strong>Адвокат</strong><br>Бургас и Сливен</p>
+        <p><a href="tel:+359888201387">0888 201 387</a></p>
+        <p><a href="mailto:svetla7007@abv.bg">svetla7007@abv.bg</a></p>
+      </div>
+      <div class="card animate">
+        <h3>Стефан Йорданов</h3>
+        <p><strong>Юрист-медиатор</strong><br>Сливен и Бургас</p>
+        <p><a href="tel:+359877274808">0877 274 808</a></p>
+      </div>
+      <div class="card animate">
+        <h3>Лилия Георгиева</h3>
+        <p><strong>Юрист-медиатор</strong><br>Сливен и Бургас</p>
+        <p><a href="tel:+359884718108">0884 718 108</a></p>
+        <p><a href="mailto:liligk@abv.bg">liligk@abv.bg</a></p>
+      </div>
+    </div>
+  </section>
+
+  <section id="offices" class="section-bg">
+    <h2>Контакти</h2>
+    <div class="offices-wrapper">
+      <div class="office-card animate">
+        <h3>Офис Бургас</h3>
+        <p><b>Адрес:</b> ул. Св. Патриарх Евтимий 21, Бургас</p>
+        <p><b>Лице за контакт:</b> Лилия Георгиева</p>
+        <p><b>Телефон:</b> <a href="tel:+359884718108">0884 718 108</a></p>
+        <p><b>Имейл:</b> <a href="mailto:liligk@abv.bg">liligk@abv.bg</a></p>
+        <div class="gmap">
+          <iframe 
+            style="pointer-events:auto; border:0;" 
+            src="https://www.google.com/maps?q=42.494686,27.469272&z=16&output=embed" 
+            width="100%" height="220" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <a class="btn-map" href="https://www.google.com/maps?q=ул.+Св.+Патриарх+Евтимий+21,+Бургас" target="_blank">
+          <i class="fa fa-map-location-dot"></i> Виж на картата
+        </a>
+      </div>
+      <div class="office-card animate">
+        <h3>Офис Сливен</h3>
+        <p><b>Адрес:</b> ул. Г.С. Раковски 15, офис 11, Сливен</p>
+        <p><b>Лице за контакт:</b> Елена Попова</p>
+        <p><b>Телефон:</b> <a href="tel:+359888848477">+359 888 848 477</a></p>
+        <p><b>Имейл:</b> <a href="mailto:elepopova@abv.bg">elepopova@abv.bg</a></p>
+        <div class="gmap">
+          <iframe 
+            style="pointer-events:auto; border:0;" 
+            src="https://www.google.com/maps?q=42.681168,26.323663&z=16&output=embed" 
+            width="100%" height="220" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <a class="btn-map" href="https://www.google.com/maps?q=ул.+Г.С.+Раковски+15,+Сливен" target="_blank">
+          <i class="fa fa-map-location-dot"></i> Виж на картата
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section-img" style="background-image: url('https://images.unsplash.com/photo-1416339306562-f3d12fefd36f?auto=format&fit=crop&w=1200&q=80'); padding: 40px 20px;">
+    <h2 style="color: white; text-align: center;">Свържете се с нас</h2>
+    <form action="https://formsubmit.co/liligk@abv.bg" method="POST"
+      style="max-width: 600px; margin: 0 auto; background: rgba(255,255,255,0.95); padding: 20px; border-radius: 10px;">
+      <input type="hidden" name="_next" value="https://advokatiburgas-sliven.netlify.app/thank-you.html">
+      <label for="name">Име:</label>
+      <input type="text" id="name" name="name" required>
+      <label for="email">Имейл:</label>
+      <input type="email" id="email" name="email" required>
+      <label for="message">Съобщение:</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
+      <button type="submit">Изпрати</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Адвокатска кантора Бургас - Сливен. Всички права запазени.</p>
+  </footer>
+
+  <script>
+  document.addEventListener("DOMContentLoaded", function() {
+    function onScroll() {
+      document.querySelectorAll('.animate').forEach(el => {
+        let rect = el.getBoundingClientRect();
+        if(rect.top < window.innerHeight - 50) el.classList.add('visible');
+      });
+    }
+    window.addEventListener('scroll', onScroll);
+    onScroll();
+  });
+  </script>
 </body>
-</html></html>
+</html>
